Fixed bug: ta roster not showing in admin dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import './styles/colors.scss';
+
+
 .cover {
   height: 100vh;
 }
@@ -131,3 +134,8 @@
 .hover-blue:hover {
   color: lightskyblue;
 }
+
+// Dark style
+// .ant-layout-content {
+//   background-color: $bg-dark;
+// }
